Fixed alignment of recipe box bottom

--- a/flask/static/stylesheets/index.css
+++ b/flask/static/stylesheets/index.css
@@ -2,7 +2,6 @@ body {
   text-align: center;
   margin: auto;
   width: 65%;
-  padding-top: 5em;
   font-family: sans-serif;
   padding-bottom: 5em;
 }
@@ -12,8 +11,9 @@ body {
 }
 
 .image_title {
-  max-width:80%;
-  max-height:80%;
+  max-width: 80%;
+  max-height: 80%;
+  padding-top: 5em;
 }
 
 .form_text {
@@ -78,7 +78,7 @@ body {
   text-align: left;
   line-height: 1.6em;
   vertical-align: middle;
-  padding: 1.2em 1.5em 1em .5em;
+  padding: 1em 1.5em 1em .5em;
   font-weight: 300;
   height: 8em;
   width: auto;
@@ -87,8 +87,7 @@ body {
 .reco_image {
   display: block;
   height: 100%;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
 }
 
 ul {
